<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/header"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name_user"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/userInputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_user_hint"
            android:ems="10"
            android:gravity="center" />

        <TextView
            android:id="@+id/cardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/card_number"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/userInputCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_number_hint"
            android:ems="10"
            android:gravity="center" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text"
            android:onClick="login"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>